[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Enemy/Template Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/Window.material" type="Material" id=2]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleShape" id=6]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 19.3523, 1.52207, 20.3794 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="CapsuleShape" id=5]
height = 0.950247

[node name="Basic Enemy" type="KinematicBody"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42275, 0.204553 )
shape = SubResource( 3 )

[node name="CSGMesh" type="CSGMesh" parent="Area"]
transform = Transform( 19.7688, 0, 0, 0, 1.32205, 0, 0, 0, 20.4963, 0, 1.42275, 0.204553 )
mesh = SubResource( 4 )
material = ExtResource( 2 )

[node name="HurtArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="HurtArea"]
transform = Transform( 1.14191, 0, 0, 0, -4.92478e-08, 1.06122, 0, -1.17796, -4.84995e-08, 0, 0, 0 )
shape = SubResource( 5 )

[node name="Hurt Timer" type="Timer" parent="HurtArea"]
wait_time = 0.5
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.14191, 0, 0, 0, -4.92478e-08, 1.06122, 0, -1.17796, -4.84995e-08, 0, 0, 0 )
shape = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HurtArea/Hurt Timer" to="." method="_on_Hurt_Timer_timeout"]
